--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MICROCMS_API_KEY=xxxxxxxxxx
-MICROCMS_SERVICE_DOMAIN=xxxxxxxxxx
-BASE_URL=xxxxxxxxxx
+MICROCMS_API_KEY=x03YSbmKJdw3C4FGXARfwDP9UbaDVDbcWaeZ
+MICROCMS_SERVICE_DOMAIN=qvrg6gw3kz
+BASE_URL=http://localhost:3000
